--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ captures/
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
+.idea/inspectionProfiles/Project_Default.xml
+.idea/codeStyles
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
@@ -81,3 +83,4 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
